syntax = "proto3";

import "google/protobuf/timestamp.proto";

package telemetry.message.event;

option java_multiple_files = true;
option java_package = "ru.yandex.practicum.grpc.telemetry.event";

message ClimateSensorProto{
  int32 temperature_c = 1;
  int32 humidity = 2;
  int32 co2_level = 3;
}

message LightSensorProto{
  int32 link_quality = 1;
  int32 luminosity = 2;
}

message MotionSensorProto{
  int32 link_quality = 1;
  bool motion = 2;
  int32 voltage = 3;
}

message SwitchSensorProto{
  bool state = 1;
}

message TemperatureSensorProto{
  string id = 1;
  string hubId = 2;
  google.protobuf.Timestamp timestamp = 3;
  int32 temperature_c = 4;
  int32 temperature_f = 5;
}

message SensorEventProto{
  string id = 1;
  string hubId = 2;
  google.protobuf.Timestamp timestamp = 3;
  oneof payload {
    ClimateSensorProto climate_sensor = 4;
    LightSensorProto light_sensor = 5;
    MotionSensorProto motion_sensor = 6;
    SwitchSensorProto switch_sensor = 7;
    TemperatureSensorProto temperature_sensor = 8;
  }
}